--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,95 @@
-# tasks file for ubuntu-1604-collectd-haproxy
+# tasks file for collectd-plugin-haproxy
 ---
-- name: create directory
+- name: install dependencies
+  apt:
+    name: "{{ item }}"
+    state: "{{ apt_install_state | default('latest') }}"
+    update_cache: true
+    cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
+  with_items: "{{ collectd_plugin_haproxy_dependencies }}"
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-install
+    - collectd-plugin-haproxy-install-dependencies
+
+- name: create (checkout) directory
   file:
-    path: "{{ ubuntu_1604_collectd_haproxy_install_path }}"
+    path: "{{ collectd_plugin_haproxy_checkout_path }}"
     state: directory
     owner: root
     group: root
     mode: 0755
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-checkout
+    - collectd-plugin-haproxy-checkout-directory
 
-- name: download and install
-  get_url:
-    url: "{{ ubuntu_1604_collectd_haproxy_download_url }}/raw/{{ ubuntu_1604_collectd_haproxy_version }}/haproxy.py"
-    dest: "{{ ubuntu_1604_collectd_haproxy_install_path }}/haproxy.py"
+- name: checkout repository
+  git:
+    repo: "{{ collectd_plugin_haproxy_checkout_url }}"
+    dest: "{{ collectd_plugin_haproxy_checkout_path }}"
+    version: "{{ collectd_plugin_haproxy_version }}"
+    force: true
+  register: _git_checkout
+  notify: restart collectd
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-checkout
+    - collectd-plugin-haproxy-checkout-repository
+
+- name: stat directories
+  stat:
+    path: "{{ item }}/"
+  register: _stat_directories
+  with_items:
+    - "{{ collectd_plugin_haproxy_configuration_file | dirname }}"
+    - "{{ collectd_plugin_haproxy_install_path }}"
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-configure-directories
+    - collectd-plugin-haproxy-configure-directories-stat
+
+- name: create directories
+  file:
+    path: "{{ item.item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+  with_items: "{{ _stat_directories.results }}"
+  when: item.stat.exists == false
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-configure-directories
+    - collectd-plugin-haproxy-configure-directories-create
+
+- name: configure plugin
+  template:
+    src: "{{ collectd_plugin_haproxy_configuration_file.lstrip('/') }}.j2"
+    dest: "{{ collectd_plugin_haproxy_configuration_file }}"
     owner: root
     group: root
     mode: 0644
-    force: true
-    timeout: 60
-
-- name: enable and configure plugin
-  template:
-    src: "etc/collectd/collectd.conf.d/haproxy.conf.j2"
-    dest: "/etc/collectd/collectd.conf.d/haproxy.conf"
   notify: restart collectd
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-plugin
+    - collectd-plugin-haproxy-plugin-configure
+
+- name: enable plugin
+  file:
+    src: "{{ collectd_plugin_haproxy_checkout_path }}/haproxy.py"
+    dest: "{{ collectd_plugin_haproxy_install_path }}/haproxy.py"
+    state: link
+    force: true
+  tags:
+    - configuration
+    - collectd-plugin-haproxy
+    - collectd-plugin-haproxy-plugin
+    - collectd-plugin-haproxy-plugin-enable
