--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,9 @@
-# test file for ubuntu-1604-collectd-haproxy
+# test file for collectd-plugin-haproxy
 ---
 - hosts: localhost
   connection: local
   become: true
+  pre_tasks:
+    - include: pre.yml
   roles:
     - ../../
