--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
-# defaults file for collectd-plugin-haproxy
+# defaults file
 ---
 collectd_plugin_haproxy_version: v1.0.1
 collectd_plugin_haproxy_socket: /var/run/haproxy.sock
