--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
-# meta file for collectd-plugin-haproxy
+# meta file
 ---
 galaxy_info:
+  namespace: oefenweb
   role_name: collectd-plugin-haproxy
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
