--- a/tests/tasks/pre.yml
+++ b/tests/tasks/pre.yml
@@ -2,7 +2,7 @@
 ---
 # See: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199
 - name: ensure man directory
-  file:
+  ansible.builtin.file:
     path: /usr/share/man/man1
     state: directory
     recurse: true
@@ -11,7 +11,7 @@
     - ansible_distribution_major_version is version('18', '>=')
 
 - name: install dependencies
-  apt:
+  ansible.builtin.apt:
     name:
       - collectd
     state: "{{ apt_install_state | default('latest') }}"
@@ -20,7 +20,7 @@
 
 # See: https://bugs.launchpad.net/ubuntu/+source/collectd/+bug/1872281
 - name: fix python plugin not working
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/default/collectd
     line: 'LD_PRELOAD=/usr/lib/python3.8/config-3.8-x86_64-linux-gnu/libpython3.8.so'
   when:
