--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,12 @@
 # meta file
 ---
 galaxy_info:
-  namespace: oefenweb
+  author: oefenweb
   role_name: collectd_plugin_haproxy
-  author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Ansible role to set up the SignalFx HAProxy plugin for Collectd in Debian-like systems
   license: MIT
-  min_ansible_version: 2.9.0
+  min_ansible_version: 2.10.0
   platforms:
     - name: Ubuntu
       versions:
